--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ li a:hover {
 
 .home-right {
   width: 42vw;
-  background-image: url(../public/assets/toonpic.jpeg);
+  background-image: url(../public/assets/toonpic.jpg);
   background-size: contain;
   z-index: 3;
   border-radius: 50%;
