--- a/src/index.css
+++ b/src/index.css
@@ -115,11 +115,12 @@ li a:hover {
 }
 
 .tile{
-  height: 50vh;
+  height: 30vh;
   width: 100vw;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-end;
+  padding-bottom: 4rem;
 }
 
 .tile h1{
