--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ li a:hover {
 }
 
 .home {
-  height: 90vh;
+  height: auto;
   width: 100vw;
 }
 
@@ -58,31 +58,31 @@ li a:hover {
 }
 
 .home-left, .home-right {
-  width: 50vw;
-  height: 85vh;
+  width: 100vw;
+  height: auto;
 }
 
 .home-left h1{
-  width: 50vw;
+  /* width: 50vw; */
   height: 42.5vh;
   justify-content: center;
   align-items: flex-end;
   display: flex;
-  font-size: 60px;
+  font-size: 4vw; 
 }
 
 .home-left p{
   align-items: flex-start;
-  font-size: 30px;
-  width: 50vw;
+  font-size: 2vw;
+  /* width: 50vw; */
   justify-content: center;
   display: flex;
 }
 
 .home-left a{
   display: inline-block;
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 1vw 2vw;
+  font-size: 1.6rem;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
@@ -99,18 +99,28 @@ li a:hover {
 }
 
 .home-left div{
-  height: 33.5vh;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .home-right {
-  width: 42vw;
-  background-image: url(../public/assets/toonpic.jpg);
-  background-size: contain;
+  /* width: 50vw; */
+  /* background-image: url(../public/assets/toonpic.jpg); */
+  /* background-size: contain; */
   z-index: 3;
+  /* border-radius: 50%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-right img{
+  /* background-size: contain; */
+  /* height: 100%; */
+  object-fit: cover;
   border-radius: 50%;
 }
 
@@ -128,11 +138,13 @@ li a:hover {
 }
 
 .minitile-area {
-  height: 50vh;
+  height: auto;
   width: 100vw;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  /* margin: 10px; */
 }
 
 .minitile {
