--- a/src/index.css
+++ b/src/index.css
@@ -333,9 +333,8 @@ button:hover {
   }
 }
 
-@media screen and (min-width: 900px) and (max-width: 1600px) {
+/* @media screen and (min-width: 900px) and (max-width: 1600px) {
   .home-left h1{
-    /* width: 50vw; */
     height: 22vh;
   }
 
@@ -352,7 +351,7 @@ button:hover {
     font-size: 1.5rem;
     margin: 0;
   }
-}
+} */
 
 @media screen and (max-width: 600px) {
 
